...
                    }
                },
                keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Number),
                singleLine = true,
                modifier = Modifier
                    .focusRequester(focusRequester)
                    .testTag("go_to_page_input")
            )
        },
        confirmButton = {
            TextButton(onClick = {
                val page = text.toIntOrNull()
                if (page != null) {
...
