...

    LazyColumn(
        state = lazyListState,
        userScrollEnabled = true,
        modifier = modifier
            .fillMaxSize()
            .testTag("webtoon_viewer")
            .pointerInput(Unit) {
                awaitEachGesture {
                    awaitFirstDown(requireUnconsumed = false)
                    do {
                        val event = awaitPointerEvent()
                        val zoomChange = event.calculateZoom()
...
